tests/baselines/reference/collisionSuperAndLocalVarInMethod.errors.txt
tests/cases/compiler/collisionSuperAndLocalVarInMethod.ts(9,13): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
tests/cases/compiler/collisionSuperAndLocalVarInMethod.ts(15,17): error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.


==== tests/cases/compiler/collisionSuperAndLocalVarInMethod.ts (2 errors) ====
    var _super = 10; // No Error
    class Foo {
        x() {
            var _super = 10; // No error
        }
    }
    class b extends Foo {
        public foo() {
            var _super = 10; // Should be error 
                ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
        }
    }
    class c extends Foo {
        public foo() {
            var x = () => {
                var _super = 10; // Should be error
                    ~~~~~~
!!! error TS2401: Duplicate identifier '_super'. Compiler uses '_super' to capture base class reference.
            }
        }
    }